k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-thought-backend
spec:
  type: NodePort
  selector:
    app: second-thought-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 32003
